tests/sksl/errors/golden/SwitchTypes.glsl
### Compilation failed:

error: 9: expected 'int', but found 'float2'
error: 10: expected 'int', but found 'float'
error: 11: expected 'int', but found 'float2'
error: 12: expected 'int', but found 'float'
error: 13: expected 'int', but found 'float'
error: 14: expected 'int', but found 'float'
error: 15: expected 'int', but found 'float'
7 errors
